@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Update captcha longevity to 5 minutes max, as according to 4chan's change.
 
 3.9.4
 - aeosynth
